force-app/main/default/objects/Temporal_Cesiones__c/Temporal_Cesiones__c.object-meta.xml
<CustomObject>
    <label>Temporal Cesion</label>
    <nameField>
        <label>Temporal Cesion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Cesiones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>