force-app/main/default/objects/Temporal_Cesiones__c/fields/al_salesforce_id__c.field-meta.xml
<CustomField>
    <fullName>al_salesforce_id__c</fullName>
    <label>al_salesforce_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>