force-app/main/default/objects/Temporal_Cesiones__c/fields/Benefit_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Assignment</label>
    <referenceTo>BenefitAssignment</referenceTo>
    <relationshipLabel>Temporal Cesiones</relationshipLabel>
    <relationshipName>Temporal_Cesiones</relationshipName>
    <type>Lookup</type>
</CustomField>