force-app/main/default/objects/Temporal_Cesiones__c/fields/CS_ALUMNO__c.field-meta.xml
<CustomField>
    <fullName>CS_ALUMNO__c</fullName>
    <label>CS_ALUMNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>