force-app/main/default/objects/Temporal_Cesiones__c/fields/CS_BARCO__c.field-meta.xml
<CustomField>
    <fullName>CS_BARCO__c</fullName>
    <label>CS_BARCO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>