force-app/main/default/objects/Temporal_Cesiones__c/fields/CS_BONOS__c.field-meta.xml
<CustomField>
    <fullName>CS_BONOS__c</fullName>
    <label>CS_BONOS</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>