force-app/main/default/objects/Temporal_Cesiones__c/fields/CS_FECFIA__c.field-meta.xml
<CustomField>
    <fullName>CS_FECFIA__c</fullName>
    <label>CS_FECFIA</label>
    <type>Date</type>
</CustomField>