force-app/main/default/objects/Temporal_Cesiones__c/fields/CS_FECHA__c.field-meta.xml
<CustomField>
    <fullName>CS_FECHA__c</fullName>
    <label>CS_FECHA</label>
    <type>Date</type>
</CustomField>