force-app/main/default/objects/Temporal_Cesiones__c/fields/CS_FECPAG__c.field-meta.xml
<CustomField>
    <fullName>CS_FECPAG__c</fullName>
    <label>CS_FECPAG</label>
    <type>Date</type>
</CustomField>