force-app/main/default/objects/Temporal_Cesiones__c/fields/CS_FIANZA__c.field-meta.xml
<CustomField>
    <fullName>CS_FIANZA__c</fullName>
    <label>CS_FIANZA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>