force-app/main/default/objects/Temporal_Cesiones__c/fields/CS_HASTA__c.field-meta.xml
<CustomField>
    <fullName>CS_HASTA__c</fullName>
    <label>CS_HASTA</label>
    <type>Date</type>
</CustomField>