force-app/main/default/objects/Temporal_Cesiones__c/fields/CS_LUGAR__c.field-meta.xml
<CustomField>
    <fullName>CS_LUGAR__c</fullName>
    <label>CS_LUGAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>