force-app/main/default/objects/Temporal_Cesiones__c/fields/CS_NIVEL__c.field-meta.xml
<CustomField>
    <fullName>CS_NIVEL__c</fullName>
    <label>CS_NIVEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>