force-app/main/default/objects/Temporal_Cesiones__c/fields/CS_NUMCES__c.field-meta.xml
<CustomField>
    <fullName>CS_NUMCES__c</fullName>
    <label>CS_NUMCES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>