force-app/main/default/objects/Temporal_Cesiones__c/fields/CS_PRECES__c.field-meta.xml
<CustomField>
    <fullName>CS_PRECES__c</fullName>
    <label>CS_PRECES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>