force-app/main/default/objects/Temporal_Cesiones__c/fields/DDDKEY__c.field-meta.xml
<CustomField>
    <fullName>DDDKEY__c</fullName>
    <label>DDDKEY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>