force-app/main/default/objects/Temporal_Cesiones__c/fields/Descripcion_Error__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Error__c</fullName>
    <label>Descripcion Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Descripcion_Error</valueSetName>
    </valueSet>
</CustomField>