force-app/main/default/objects/Temporal_Cesiones__c/fields/p_salesforce_id__c.field-meta.xml
<CustomField>
    <fullName>p_salesforce_id__c</fullName>
    <label>p_salesforce_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>