force-app/main/default/objects/Temporal_Cesiones__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>CS_NUMCES__c</columns>
    <columns>CS_ALUMNO__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo_Error__c</columns>
    <columns>Descripcion_Error__c</columns>
    <columns>Benefit__c</columns>
    <columns>Benefit_Assignment__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>All Records</label>
</ListView>